--- a/resume.html
+++ b/resume.html
@@ -35,11 +35,11 @@
           <h1>Resume</h1>
           <div class="resume-header">
             <h2>KRISZTIAN HOLUB</h2>
-            <h3>1925 Quentin road,<br>
+            <p>1925 Quentin road,<br>
               Brooklyn, NY 11229 <br>
               347-725-2616 <br>
               kholub1989@gmail.com <br>
-              <a href="https://github.com/kholub1989">github.com/kholub1989</a></h3>
+              <a href="https://github.com/kholub1989">github.com/kholub1989</a></p>
           </div>
           <p class="main">An energetic web developer who is able to work alongside other talented IT professionals in creating websites to the very highest standards. A person who has a high awareness of industry issues and trends, particularly in
             regard to
