--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <p>Fixed, sprites, HTML5, CSS3, Javascript</p>
             </div>
 
-          <a href="portfolio/nerds/index.html"><img src="portfolio/nerds-index.jpg" alt="Nerds"></a>
+          <a class="mySlides-img" href="portfolio/nerds/index.html"><img src="portfolio/nerds-index.jpg" alt="Nerds"></a>
           </div>
           <div class="mySlides">
             <div class="text">
@@ -112,7 +112,7 @@
               <h3>Barbershop</h3>
               <p>HTML5, CSS3, Javascript</p>
             </div>
-            <a href="portfolio/barbershop/index.html"><img src="portfolio/barbershop-index.jpg" alt="Barbershop"></a>
+            <a href="portfolio/barbershop/index.html"><img src="portfolio/barbershop-index.jpg" alt="Barbershop" class="mySlides-img"></a>
           </div>
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
