add box-shadow to project img

--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
               <p>Fixed, sprites, HTML5, CSS3, Javascript</p>
             </div>
 
-          <a class="mySlides-img" href="portfolio/nerds/index.html"><img src="portfolio/nerds-index.jpg" alt="Nerds"></a>
+          <a href="portfolio/nerds/index.html"><img class="my-slides-img" src="portfolio/nerds-index.jpg" alt="Nerds"></a>
           </div>
           <div class="mySlides">
             <div class="text">
               <h3>Gllacy</h3>
               <p>Responsive, SVG, HTML5, CSS3, Javascript</p>
             </div>
-            <a href="portfolio/gllacy/index.html"><img src="portfolio/gllacy-index-1200.jpg" alt="Gllacy"></a>
+            <a href="portfolio/gllacy/index.html"><img class="my-slides-img" src="portfolio/gllacy-index-1200.jpg" alt="Gllacy"></a>
           </div>
           <div class="mySlides">
             <div class="text">
               <h3>Barbershop</h3>
               <p>HTML5, CSS3, Javascript</p>
             </div>
-            <a href="portfolio/barbershop/index.html"><img src="portfolio/barbershop-index.jpg" alt="Barbershop" class="mySlides-img"></a>
+            <a href="portfolio/barbershop/index.html"><img class="my-slides-img" src="portfolio/barbershop-index.jpg" alt="Barbershop" class="mySlides-img"></a>
           </div>
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
